<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.tecii.android.notafinal.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingrese las calificaciones"
        android:id="@+id/Titulo"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/PA1"
        android:id="@+id/txtPA1"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/Titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/PA2"
        android:id="@+id/txtPA2"
        android:layout_below="@+id/txtPA1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/PA3"
        android:id="@+id/txtPA3"
        android:layout_below="@+id/txtPA2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/PA4"
        android:id="@+id/txtPA4"
        android:layout_below="@+id/txtPA3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="11"
        android:hint="@string/PB1"
        android:id="@+id/txtPB1"
        android:layout_below="@+id/txtPA4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="11"
        android:hint="@string/PB2"
        android:id="@+id/txtPB2"
        android:layout_below="@+id/txtPB1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="11"
        android:hint="@string/PB3"
        android:id="@+id/txtPB3"
        android:layout_below="@+id/txtPB2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="11"
        android:hint="@string/PB4"
        android:id="@+id/txtPB4"
        android:layout_below="@+id/txtPB3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:text="@string/BtnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_above="@+id/txtPB1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TvRes"
        android:ems="16"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/txtPB4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
